--- a/src/styles/SlideoutPanel.scss
+++ b/src/styles/SlideoutPanel.scss
@@ -3,7 +3,7 @@
   height: calc(100vh - 64px - 64px - 16px - 16px);
   // max-height: 480px;
   top: calc(64px + 16px);
-  left: -350px;
+  left: -352px;
   // Do not change based on device width.
   background-color: #fff;
   position: absolute;
